add eep0018 support. fast json encoding/decoding .

--- a/rebar.config
+++ b/rebar.config
@@ -22,7 +22,8 @@
         "1.5.0"}}},
 
     {couchjs, ".*", {git, "git://refuge.io/couchjs.git", "master"}},
-    {couch_icu, ".*", {git, "git://refuge.io/couch_icu.git", "master"}}
+    {couch_icu, ".*", {git, "git://refuge.io/couch_icu.git", "master"}},
+    {json, ".*", {git, "git://refuge.io/eep0018.git", "master"}}
 ]}.
 
 {cover_enabled, true}.
