use couch_icu module.

--- a/rebar.config
+++ b/rebar.config
@@ -12,18 +12,6 @@
 % License for the specific language governing permissions and limitations under
 % the License.
 
-{so_name, "couch_icu_driver.so"}.
-
-{port_envs, [
-  {"DRV_CFLAGS",  "$DRV_CFLAGS -DPIC -O2 -fno-common"},
-  {"DRV_LDFLAGS", "$DRV_LDFLAGS -lm -licuuc -licudata -licui18n -lpthread"},
-
-  {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lcrypt"},
-
-  {"freebsd", "DRV_CFLAGS", "$DRV_CFLAGS -I/usr/local/include"},
-  {"freebsd", "DRV_LDFLAGS", "$DRV_LDFLAGS -L/usr/local/lib"}
-]}.
-
 
 {deps, [
     {oauth, ".*", {git, "git://refuge.io/erlang-oauth.git", {branch,
@@ -33,7 +21,8 @@
     {mochiweb, ".*", {git, "git://refuge.io/mochiweb.git", {tag,
         "1.5.0"}}},
 
-    {couchjs, ".*", {git, "git://refuge.io/couchjs.git", "master"}}
+    {couchjs, ".*", {git, "git://refuge.io/couchjs.git", "master"}},
+    {couch_icu, ".*", {git, "git://refuge.io/couch_icu.git", "master"}}
 ]}.
 
 {cover_enabled, true}.
