--- a/rebar.config
+++ b/rebar.config
@@ -18,27 +18,15 @@
     {snappy, ".*", {git, "git://refuge.io/snappy-erlang.git", 
                    {branch, "refuge"}}},
     {ejson, ".*", {git, "git://refuge.io/ejson.git", "master"}},
-    {couchjs, ".*", {git, "git://refuge.io/couchjs.git", "master"}}
+    {couchjs, ".*", {git, "git://refuge.io/couchjs.git", {branch,
+                "shared"}}}
 ]}.
-
 
 {so_name, "couch_icu_driver.so"}.
-
 {port_envs, [
-	{"CC", "gcc"},
-
-    {"DRV_CFLAGS", "$DRV_CFLAGS -I c_src/system/include"},
-    
-    {"DRV_LDFLAGS", "$DRV_LDFLAGS c_src/system/lib/libicui18n.a \
-        c_src/system/lib/libicuuc.a c_src/system/lib/libicudata.a"},
-
-    {".*", "LDFLAGS", "$LDFLAGS -lstdc++"}
+  {"DRV_CFLAGS",  "$DRV_CFLAGS -DPIC -O2 -fno-common"},
+  {"DRV_LDFLAGS", "$DRV_LDFLAGS -lm -licuuc -licudata -licui18n -lpthread"},
+  {"linux", "DRV_LDFLAGS", "$DRV_LDFLAGS -lcrypt"},
+  {"freebsd", "DRV_CFLAGS", "$DRV_CFLAGS -I/usr/local/include"},
+  {"freebsd", "DRV_LDFLAGS", "$DRV_LDFLAGS -L/usr/local/lib"}
 ]}.
-
-
-
-
-{pre_hooks, [{compile, "./utils/fetch_libs.sh"},
-            {compile, "make -C c_src"}]}.
-
-{post_hooks, [{clean, "make -C c_src clean"}]}.
