--- a/c_src/Makefile.osx
+++ b/c_src/Makefile.osx
@@ -76,7 +76,7 @@ $(COFFEE_FILE): $(JS_FILE_COMPONENTS) $(COFFEE_FILE_COMPONENTS_LAST)
 icu: priv/couch_icu_driver.so
 
 priv/couch_icu_driver.so: c_src/icu_driver/couch_icu_driver.c
-	$(GCC) $(ICU_CFLAGS) $^ $(ICU_LIBS) -o $@ 
+	@$(GCC) $(ICU_CFLAGS) $^ $(ICU_LIBS) -o $@ 
 	
 nifs: couch_ejson_compare
 
