--- a/c_src/Makefile.unix
+++ b/c_src/Makefile.unix
@@ -35,7 +35,7 @@ COUCH_EJSON_COMPARE_FILES= \
 ICU_CFLAGS=$(shell icu-config --cflags 2>/dev/null) $(DRV_CFLAGS) 
 ICU_LIBS=$(shell icu-config --ldflags 2>/dev/null) $(DRV_LDFLAGS) 
 
-ifdef ($(USE_STATIC_ICU), 1)
+ifeq ($(USE_STATIC_ICU), 1)
 	ICU_CFLAGS=$(DRV_CFLAGS) -I$(STATICLIBS)
 	ICU_LIBS=-lstdc++ -fPIC $(DRV_LDFLAGS) \
 			 $(STATICLIBS)/icu/lib/libicui18n.a \
